# ChangeLog for dev-perl/yaml
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/yaml/ChangeLog,v 1.117 2014/08/21 20:13:15 axs Exp $

*yaml-0.840.0-r1 (21 Aug 2014)

  21 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +yaml-0.840.0-r1.ebuild, -yaml-0.840.0.ebuild:
  bumped 0.840.0 EAPI to 5; committed directly to stable as no other changes
  present and revbump helps stable systems to keep from dieing on perl-5.18
  upgrade

*yaml-0.900.0 (12 Feb 2014)

  12 Feb 2014; Tim Harder <radhermit@gentoo.org> +yaml-0.900.0.ebuild:
  Version bump.

  02 Feb 2014; Mike Frysinger <vapier@gentoo.org> yaml-0.840.0.ebuild:
  Mark arm64/m68k/s390/sh stable.

  24 Jan 2014; Mikle Kolyada <zlogene@gentoo.org> -yaml-0.810.0.ebuild,
  yaml-0.840.0.ebuild:
  sparc stable wrt bug #496172; Drop old.

  24 Jan 2014; Mikle Kolyada <zlogene@gentoo.org> yaml-0.840.0.ebuild:
  ppc64 stable wrt bug #496172

  24 Jan 2014; Mikle Kolyada <zlogene@gentoo.org> yaml-0.840.0.ebuild:
  ia64 stable wrt bug #496172

  24 Jan 2014; Mikle Kolyada <zlogene@gentoo.org> yaml-0.840.0.ebuild:
  x86 stable wrt bug #496172

  24 Jan 2014; Mikle Kolyada <zlogene@gentoo.org> yaml-0.840.0.ebuild:
  amd64 stable wrt bug #496172

  24 Jan 2014; Mikle Kolyada <zlogene@gentoo.org> yaml-0.840.0.ebuild:
  alpha stable wrt bug #496172

  23 Jan 2014; Markus Meier <maekke@gentoo.org> yaml-0.840.0.ebuild:
  arm stable, bug #496172

  20 Jan 2014; Agostino Sarubbo <ago@gentoo.org> yaml-0.840.0.ebuild:
  Stable for ppc, wrt bug #496172

  20 Jan 2014; Jeroen Roovers <jer@gentoo.org> yaml-0.840.0.ebuild:
  Stable for HPPA (bug #496172).

  02 Sep 2012; Torsten Veller <tove@gentoo.org> -yaml-0.71.ebuild,
  -yaml-0.730.0.ebuild, -yaml-0.750.0.ebuild, -yaml-0.770.0.ebuild,
  -yaml-0.800.0.ebuild:
  Cleanup

  19 Aug 2012; Raúl Porcel <armin76@gentoo.org> yaml-0.810.0.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #423227
