@@ -1,0 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST Test-YAML-1.05.tar.gz 11500 SHA256 9309f4b0d8a1df5632a6e31b9992b1d4b9b69201d90b8db6e44e5c079857361d SHA512 51b2be5a24cb0b47c1be6127bae57b4c71411424dd2063b0aad45d052796ecf1c59c62923958394bc8bf048c7543275f6e8859f1dc4d556bba5470cae1f43070 WHIRLPOOL 93338025004caa6e25982ba6c7fe0a047485fe89a41e91aa3587c7c2c787bc3333b5f34dda81bd7ef61672656031b8079f7c4ba77110c3a50a61b1ecc99470b4
+EBUILD Test-YAML-1.50.0.ebuild 713 SHA256 25e9c77c39a27a5ad8766ff825137e0f9a4f29ca694c0dc2821b95f0cc86866a SHA512 2e8bcfd605edcef1a3f5b3832a4f0061bf4beb2fb215d485cf9ec2ad293bf6d2d302823ce3cc36f551ac2843272c09ffd4bc4317244d32b4cf14c0a91c4fa767 WHIRLPOOL 74f113e79ee5a719d3b787470cff0311d26780277a267d7bb8aa30488e45e7c52a246265f37cddaf7670016b07c021f2c924993dec39cc8fdbd344eca37b3b50
+MISC ChangeLog 389 SHA256 9ad4385efec367fd9a3f27f4cbbf9a6b408f2c46a950b5d1a9b23e908393ea04 SHA512 85b886b2ab6ba73f877f3e61b3a0a45e783922f13157ca59be3732adf86ef2ad3418a496c07f3cae8682292204884f5dda97b0f52459b38277041dc353a1b5f9 WHIRLPOOL 939d8a36a438a7a237c8c828bde7551105bffb4211cdc5a255fe7a233a6e9e492df695bd856aa7a161bc77c0de13c6d53b0ccf365af0a5704acecab8f45a49a6
+MISC metadata.xml 1672 SHA256 3182132352695bf59ed0d2df7f59e049d1b26faa75a2cd7e70ca2fe32134fd42 SHA512 e5c4fbbef0626dac01753ad0f8878c24c092961207505518ce947d5bd79946c9a470632b8adf3757c3ca4b778f25cbaf6e7ebcd90e485fad394ab8776868d952 WHIRLPOOL a6d6cdf1e2227262c31f62fc765adb0e1190903a137d6874c8105ea4bf335680425a9e8f2fb92583553c38718428c4682eb9b8b3070161e8fe578ec0d3168167
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCABmBQJU7l0YXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
+QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcuUQP/R0tWEpmSNReIctR/OqPv34c
+kFy4XR84bdGRdeCt0TlFZdkP1hjLXsOfMbj/Ytj6bv4fGtQNlEbFvtprFRGBJmO6
+b9M6dK1PKEy5uTXBQD0jDZQHEgBAzwvSHctzbGLxYMMkLFkq+BKhZI18Zb/WXKUJ
+a9lRkhL4OakCg2jiBc+hMNrzkDnZ8MG2U1ojCzR8fsBUC+pKKC3os0Klc9L0ulZm
+IoAL0kcFNzDgRay2pFTkAh2yxJzjGTXQm6SFrSGhhHli5iutTH5Tph/48BZ5nsHd
+fypcvrDdQGd8cp00dW2+j8zx99Zev3brIn0rDFeimN2yAH6A6U34DZ9F68FNQ04F
+25PIEXVmzr0jEcLg7G6C8ErolSUzxvt4RwrD9Jl/tWnnFDL5/9gKdwxnqwwttofM
+xl46+oUzjkrO3yVlvFeeIw3MqXLfkS/ctMjGsuFTH0DdJ5rCTUv6Crm7CUAXVFlk
+6N6qN95QUZCXpFyGscRZXMEFYYdywOgANIj/7YnEeMzMCNMqnhHrIbgbFyNi0lXq
+BaB/su3MqizDWcznEApjdYBsay6IID5+qA5os/v/vuX/Lbz5wbwJ3kxQ8BWo4dSg
+JgkJ7Dz2f46QbC8d5NsCKHOuZFD7KluH2zqcmNtIGMajN2FUgUXs2XvS9tidP9dY
+wnl1B7akTbbhJZ2+uRej
+=YIVe
+-----END PGP SIGNATURE-----
