@@ -1,0 +1,9 @@
+# ChangeLog for dev-perl/Test-YAML
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-YAML/ChangeLog,v 1.1 2015/02/25 23:39:03 dilfridge Exp $
+
+*Test-YAML-1.50.0 (25 Feb 2015)
+
+  25 Feb 2015; Andreas K. Huettel <dilfridge@gentoo.org>
+  +Test-YAML-1.50.0.ebuild, +metadata.xml:
+  New package, split out from dev-perl/yaml
