@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/yaml
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/yaml/ChangeLog,v 1.117 2014/08/21 20:13:15 axs Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/yaml/ChangeLog,v 1.118 2015/02/25 23:40:57 dilfridge Exp $
+
+*yaml-1.140.0 (25 Feb 2015)
+
+  25 Feb 2015; Andreas K. Huettel <dilfridge@gentoo.org> +yaml-1.140.0.ebuild:
+  Version bump
 
 *yaml-0.840.0-r1 (21 Aug 2014)
 
